
# ---- STANDARD CONFIG ----
[project]
name = "VirgilAI"
description = "Virgil is an advanced virtual assistant that is based on the powerful GPT-3.5 artificial intelligence developed by OpenAI. This virtual assistant is designed to offer a wide range of features and capabilities similar to those of well-known virtual assistants such as Amazon's Alexa."
version = "v4.0.2"
readme = "README.md"
requires-python = ">=3.11"

[project.license]
file = "LICENSE"

[tool.debug]
level_debug = "info" # (debug,info,warning,error,critical)
logs_file = false

# ------ CONFIG FOR POETRY ------
[tool.poetry]
name = "VirgilAPI"
version = "2.0.1"
description = "API created to allow communication between a Flutter Android application and a Python application (But con Fast)."
authors = ["Retr0100 <dragonfaiver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.2"
fastapi = "^0.109.2"
slowapi = "^0.1.9"
pymongo = "^4.6.1"
motor = "^3.3.2"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
coverage = "^7.3.2"

# ------ CONFIG OF RUFF  --------
[tool.ruff]
ignore = ["E501"]
extend-include = ["*.pyw"]
select = ["E","F","N","D","UP","PYI","SLOT","SIM","TD","FIX","W","PL"]
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    "__pypackages__",
    "venv",
]
respect-gitignore = true
target-version = "py312"

[tool.ruff.pydocstyle]
convention = "google"





